--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@coveo/atomic": "^0.2.0-alpha.0",
-    "@coveo/bueno": "^0.6.0-alpha.8",
-    "@coveo/headless": "^0.6.0-alpha.8",
+    "@coveo/bueno": "^0.6.0",
+    "@coveo/headless": "^0.7.0-alpha.3",
     "@stencil/core": "^2.4.0",
     "@types/node": "14.14.30",
     "coveo-styleguide": "^9.32.5",
